code_20260317:bug try to fix--dan